syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityIdentifier.proto";
import "Vector.proto";
import "HitCollision.proto";
import "AttackHitEffectResult.proto";


message AttackResult {
  float damage_shield = 1202;
  float element_amplify_rate = 900;
  float element_durability_attenuation = 425;
  float endure_delta = 430;
  float damage = 6;
  string anim_event_id = 4;
  bool is_crit = 13;
  bool is_resist_text = 1858;
  bool mute_element_hurt = 1530;
  bool use_gadget_damage_action = 1418;
  int32 hit_retreat_angle_compat = 9;
  uint32 addhurt_reaction_type = 1887;
  uint32 amplify_reaction_type = 2005;
  uint32 attack_count = 1564;
  uint32 attack_timestamp_ms = 1188;
  uint32 bullet_fly_time_ms = 91;
  uint32 create_count_sync_to_server = 1011;
  uint32 critical_rand = 1664;
  uint32 defense_id = 15;
  uint32 endure_break = 7;
  uint32 gadget_damage_action_idx = 1110;
  uint32 hashed_anim_event_id = 278;
  uint32 hit_pos_type = 2;
  uint32 target_type = 1366;
  uint32 attacker_id = 11;
  uint32 element_type = 5;
  Vector resolved_dir = 1;
  AbilityIdentifier ability_identifier = 14;
  AttackHitEffectResult hit_eff_result = 8;
  HitCollision hit_collision = 10;
}