syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "ShapeSphere.proto";
import "ShapeBox.proto";


message MassiveEntityElementOpBatchNotify {
	float attack_element_durability = 7;
	int32 reaction_source_type = 13;
	int32 source_element_type = 15;
	int32 entity_type = 12;
	uint32 op_idx = 3;
	uint32 attacker_id = 6;
	uint32 user_id = 9;
	oneof check_shape {
		ShapeBox shape_box = 2;
		ShapeSphere shape_sphere = 5;
	}
}